assets/css/style.css
/* Body */

html, body {
  margin: 0;
  overflow: hidden;
  font-family: Arial, Helvetica, sans-serif;
}

div#container {
  height: 100vh;
  width: 100vw;
} 

div#app {
  height: 100%;
}

/* Repo dashboard */

div.repo-dashboard {
  height: 100%;
  display: flex;
  flex-direction: column;
}

/* Repo header */ 

div.repo-header {
  height: 50px;
  display: table;
  text-align: center;
}

div.repo-header h1 {
  display: table-cell;
  vertical-align: middle;
  margin: 0px;
  font-size: 20px;
}

/* Repo content */

div.repo-content {
  flex: 1;
  display: flex;
}

/* Graph viewer */

div.graph-viewer {
  flex: 1;
  position: relative;
}

/* Commit graph */

div.commit-graph {
  width: 50%;
  height: 100%;
  overflow-x: scroll;
  overflow-y: hidden;
}

div.commit-graph canvas {
  position: absolute;
  right: 50%;
  display: block;
  z-index: 2;
  pointer-events: none;
}

/* Commit list */

div.commit-list {
  width: 100%;
  height: calc(100% - 15px);
  position: absolute;
  top: 0px;
  z-index: 1;
  overflow-y: scroll;
  text-align: left;
}

div.commit-list ul {
  margin: 0px;
  padding-left: 0px;
  list-style: none;
  line-height: 22px;
}

div.commit-list li {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  height: 22px;
  padding-left: calc(50% + 20px);
  padding-top: 3px;
  padding-bottom: 3px;
  font-size: 13px;
}

div.commit-list li:hover {
  background: #eee;
}

div.commit-list li.selected-commit {
  background: #ccc;
}

div.commit-list li span.reference {
  border-radius: 5px;
  padding: 2px;
  margin-right: 2px;
  background-color: var(--branch-color);
  color: white;
}

/* Patch viewer */

div.patch-viewer {
  flex: 1;
  z-index: 1;
}

div.patch-header {
  height: 30px;
  display: table;
}

div.patch-header h2 {
  margin: 0px;
  padding: 0px 8px;
  display: table-cell;
  vertical-align: middle;
  font-size: 16px;
}

div.patch-editor {
  height: calc(100% - 50px);
}

/* Splitter */

div.splitter {
  width: 4px;
  background: #ccc;
  cursor: col-resize;
}

/* Commit viewer */

div.commit-viewer {
  width: 300px;
  min-width: 300px;
  display: flex;
  flex-direction: column;
  font-size: 14px;
  background: white;
  z-index: 2;
}

div.commit-viewer h3 {
    margin: 4px 0;
    text-align: center;
    font-size: 13px;
    font-weight: normal;
}

div.commit-viewer h2 {
    margin: 8px;
    font-size: 16px;
}

div.commit-viewer p {
  margin: 4px 8px;
}

/* Patch list */

ul.patch-list {
  flex: 1;
  margin: 8px;
  border: 1px;
  border-style: solid;
  padding-left: 0px;
  list-style: none;
  overflow-y: auto;
}

ul.patch-list li {
  padding: 2px 4px;
  user-select: none;
}

ul.patch-list li:hover {
  background: #eee;
}

ul.patch-list li.selected-patch {
  background: #ccc;
}

/* Patch icons */

span.patch-add::before {
  content: '+';
  font-family: 'Courier New', Courier, monospace;
  font-weight: bold;
  color: green;
}

span.patch-delete::before {
  content: '-';
  font-family: 'Courier New', Courier, monospace;
  font-weight: bold;
  color: red;
}

span.patch-modify::before {
  content: '\2026';
  font-family: 'Courier New', Courier, monospace;
  font-weight: bold;
  color: orange;
}

span.patch-rename::before {
  content: '/';
  font-family: 'Courier New', Courier, monospace;
  font-weight: bold;
  color: dodgerblue;
}

/* Ellipsis middle */

.ellipsis-middle:before {
  float: right;
  content: attr(data-tail);
}

.ellipsis-middle {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

